# set-iptables

./: README.md  project.toml  setup.cfg  setup.py
src/: __main__.py  firewall.py
src/utils/: __init__.py  reset_rules.py
