[metadata]
name = set-iptables
version = attr: set-iptables.__version__
author = Giuliano Vallone
author_email = glnvlln0@gmail.com
long_description = file README.md
long_description_content_type = text/markdown
keywords = linux, iptables, installer
license = GPL
license_files =
    LICENSE
project_urls =
    SOURCE = https://github.com/Iaio99/set-iptables
classifiers =
    "Programming Language :: Python :: 3.10",
    "Operating System :: POSIX :: Linux",

[options]
packages = find:
python_requires = >= 3.10
zip_safe = True
include_package_data = True

[options.packages.find]
include = 
    set-iptables
    set-iptables.*

[options entry_points]
console_scripts =
    set-iptables = set-iptables:main